--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,20 @@ body {
   /* Smoothly transition the background color */
   transition: background-color .5s;
 }
+/* player container */
+.player-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  width: 100%;
+  height: 30%;
+  border: 3px solid black;
+  
+  }
 /* Using flex with the column direction to
    align items in a vertical direction */
+
 .player {
-  height: 95vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -134,4 +144,9 @@ i.fa-pause-circle,
 i.fa-step-forward,
 i.fa-step-backward {
   cursor: pointer;
+}
+
+.lower-bar {
+  background-color: gray;
+  text-align: center;
 }
